--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring_hiber
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.mvc.hiddenmethod.filter.enabled=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
